--- a/www/index.html
+++ b/www/index.html
@@ -11,24 +11,26 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/angular-resource/angular-resource.min.js"></script>
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="cvonlineapp">
+    <script src="js/routes.js"></script>
     <script src="js/api.js"></script>
     <script src="js/models/User.js"></script>
     <script src="js/models/Cv.js"></script>
     <script src="js/services/ErrorHandler.js"></script>
+    <script src="js/controllers/LoginController.js"></script>
+  </head>
+  <body ng-app="cvonlineapp">
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
+      <ion-nav-bar class="bar-positive">
+        <ion-nav-back-button></ion-nav-back-button>
+      </ion-nav-bar>
+      <ion-nav-view>
+      </ion-nav-view>
     </ion-pane>
   </body>
 </html>
