--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,10 @@
     <script src="js/controllers/LoginController.js"></script>
   </head>
   <body ng-app="cvonlineapp">
-    <ion-pane>
-      <ion-nav-bar class="bar-positive">
-        <ion-nav-back-button></ion-nav-back-button>
-      </ion-nav-bar>
-      <ion-nav-view>
-      </ion-nav-view>
-    </ion-pane>
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button></ion-nav-back-button>
+    </ion-nav-bar>
+    <ion-nav-view animation="slide-left-right">
+    </ion-nav-view>
   </body>
 </html>
