add new references to index.html

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,8 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet">
+ 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
@@ -23,9 +24,13 @@
     <script src="js/models/Cv.js"></script>
     <script src="js/services/ErrorHandler.js"></script>
     <script src="js/controllers/LoginController.js"></script>
+    <script src="js/controllers/MenuController.js"></script>
+    <script src="js/controllers/ProfileController.js"></script>
+    <script src="js/controllers/CvController.js"></script>
+    <script src="js/controllers/ChangeTemplateController.js"></script>
   </head>
   <body ng-app="cvonlineapp">
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-assertive">
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view animation="slide-left-right">
