--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/fb/openfb.js"></script>
+    <script src="js/fb/ngopenfb.js"></script>
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/api.js"></script>
