--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>CV app</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *"> -->
 
 
     <!-- compiled css output -->
@@ -18,8 +18,11 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/ngOpenFB/ngOpenFB.js"></script>
+    <script src="js/fb/openfb.js"></script>
+    <script src="js/fb/ngopenfb.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/factory/localStorage.js"></script>
+    <script src="js/constants.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/api.js"></script>
     <script src="js/models/User.js"></script>
