--- a/www/index.html
+++ b/www/index.html
@@ -13,13 +13,15 @@
  
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
+    <script src="lib/angular-resource/angular-resource.min.js"></script>
+    <script src="lib/ionic-wizard/dist/ion-wizard.min.js"></script>
+    <script src="lib/ejs/ejs.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/fb/openfb.js"></script>
-    <script src="js/fb/ngopenfb.js"></script>
+    <script src="js/libs/fb/openfb.js"></script>
+    <script src="js/libs/fb/ngopenfb.js"></script>
     <script src="js/app.js"></script>
     <script src="js/factory/localStorage.js"></script>
     <script src="js/constants.js"></script>
