add some changes to cv online

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/controllers/MenuController.js"></script>
     <script src="js/controllers/ProfileController.js"></script>
     <script src="js/controllers/CvController.js"></script>
+    <script src="js/controllers/CreateCvController.js"></script>
     <script src="js/controllers/ChangeTemplateController.js"></script>
   </head>
   <body ng-app="cvonlineapp">
