--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/libs/fb/ngopenfb.js"></script>
     <script src="js/app.js"></script>
     <script src="js/factory/localStorage.js"></script>
+    <script src="js/factory/cvForm.js"></script>
     <script src="js/constants.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/api.js"></script>
