Picture upload and camera

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,9 @@
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="lib/ionic-wizard/dist/ion-wizard.min.js"></script>
     <script src="lib/ejs/ejs.min.js"></script>
+    
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
